# saeculum

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_chronik_narration.py  test_cli.py  test_climate.py  test_conflict.py  test_determinism.py  test_epochs.py  test_events.py  test_goals.py  test_hydrology.py  test_identity.py  test_invariants.py  test_karte.py  test_kausalitaet.py  test_presentation.py  test_relations.py  test_rulers.py  test_smoke.py  test_stocks.py  test_strata.py  test_tension.py  test_terrain.py  test_trade.py  test_wegekosten.py
worldsim/: __init__.py  chronicle.py  config.py  driver.py  events.py  main.py  models.py  rng.py  systems.py
worldsim/geo/: climate.py  derive.py  rain.py  terrain.py
worldsim/presentation/: __init__.py  climate.py  components.py  flow.py  hydrology.py  palette.py  query.py  rain.py  render.py  stats.py  terrain.py  visual.py  watch.py  worldmap.py
