[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worldsim"
version = "0.0.0"
description = "History Machine — eine emergente Welt-Simulation (headless Kern)"
requires-python = ">=3.11"
# Der Kern bleibt Standard-Python: KEINE Runtime-Abhaengigkeiten.
dependencies = []

[project.optional-dependencies]
# Praesentation (Phase 6): Farbe, Karte, Statistik. NUR fuer die
# presentation-Schicht — der headless Kern bleibt abhaengigkeitsfrei.
# Versionen gepinnt auf den getesteten Stand (reproduzierbare Praesentation).
presentation = ["rich==15.0.0", "numpy==2.5.1", "opensimplex==0.4.5.1"]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
    "rich==15.0.0",
    "numpy==2.5.1",
    "opensimplex==0.4.5.1",
]

[project.scripts]
worldsim = "worldsim.main:main"

[tool.setuptools.packages.find]
include = ["worldsim*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["worldsim", "tests"]

[tool.ruff.lint]
# Sinnvolle, nicht wuchernde Auswahl.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-spezifisch
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
