[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worldsim"
version = "0.0.0"
description = "History Machine — eine emergente Welt-Simulation (headless Kern)"
requires-python = ">=3.11"
# Schritt 2: die Simulation laeuft AUF der Geografie — ``worldsim.geo`` leitet die
# Region-Eigenschaften beim Worldgen aus Hoehe/Klima/Wasser ab und braucht dafuer
# numpy/opensimplex. Sie sind damit Kern-(Worldgen-)Abhaengigkeiten. Das RENDERING
# (rich) bleibt der Praesentation vorbehalten — der Kern weiss nichts von der Ansicht.
dependencies = ["numpy==2.5.1", "opensimplex==0.4.5.1"]

[project.optional-dependencies]
# Praesentation (Phase 6): Farbe, Chronik-Optik, Live-Ansicht. ``rich`` ist die einzige
# reine Darstellungs-Abhaengigkeit und bleibt hier — nie vom Kern geladen.
presentation = ["rich==15.0.0"]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
    "rich==15.0.0",
]

[project.scripts]
saeculum = "worldsim.main:main"
worldsim = "worldsim.main:main"

[tool.setuptools.packages.find]
include = ["worldsim*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["worldsim", "tests"]

[tool.ruff.lint]
# Sinnvolle, nicht wuchernde Auswahl.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-spezifisch
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
